graduation project update